-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 17, 19, 20, 21, 22
-
Component/s: hotspot
-
b05
-
riscv
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8312908 | 21.0.1 | Robbin Ehn | P2 | Resolved | Fixed | b04 |
| JDK-8312010 | 21 | Robbin Ehn | P2 | Resolved | Fixed | b32 |
| JDK-8320576 | 17.0.10 | Ludovic Henry | P2 | Resolved | Fixed | b05 |
That can cause the VM to crash on what seems like a perfectly fine instruction with SIGILL ILL_ILLOPC.
If you don't know that this syscall is critical it's very hard to debug.
In JDK 19 the VM emits the syscall itself, but never checks the return value. Same issue.
- backported by
-
JDK-8312010 RISC-V: __builtin___clear_cache can fail silently.
-
- Resolved
-
-
JDK-8312908 RISC-V: __builtin___clear_cache can fail silently.
-
- Resolved
-
-
JDK-8320576 RISC-V: __builtin___clear_cache can fail silently.
-
- Resolved
-
- relates to
-
JDK-8374056 RISC-V: Fix argument passing for the RiscvFlushIcache::flush
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/2da7aeb2
-
Commit
openjdk/jdk21/5f1d7627
-
Commit
openjdk/jdk/faf1b822
-
Commit
openjdk/riscv-port-jdk11u/d4b0021a
-
Review
openjdk/jdk17u-dev/1968
-
Review
openjdk/jdk21/90
-
Review
openjdk/jdk/14670
-
Review
openjdk/riscv-port-jdk11u/16