8310656: RISC-V: __builtin___clear_cache can fail silently.

Reviewed-by: luhenry, fyang
Backport-of: faf1b822d03b726413d77a2b247dfbbf4db7d57e